# drink-water-rs2

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: bundle.sh
src/: config.rs  icon.rs  lib.rs  main.rs  reminder.rs  stats.rs
