[package]
name = "drink-water-rs2"
version = "0.3.1"
edition = "2021"
description = "A tray-based drink water reminder app"

[package.metadata.bundle]
name = "喝水提醒"
identifier = "com.drinkwater.app"
icon = ["assets/icon.png"]
copyright = ""

[lib]
name = "drink_water_rs2"
path = "src/lib.rs"

[[bin]]
name = "drink-water-rs2"
path = "src/main.rs"

[[bin]]
name = "drink-water-settings"
path = "src/bin/settings.rs"

[[bin]]
name = "drink-water-stats"
path = "src/bin/stats.rs"

[[bin]]
name = "gen-icons"
path = "src/bin/gen_icons.rs"

[dependencies]
# shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"

# tray app
tray-icon = "0.19"
tao = "0.31"
notify-rust = "4.11"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"

# settings app
iced = { version = "0.13", default-features = false, features = ["tiny-skia", "wgpu", "canvas"] }

# icon generation
png = "0.17"
